INCLUDES = -I$(top_srcdir)/include

EXTRA_DIST = testevent.dsp testthread.dsp testthreadpool.dsp testthreadpool2.dsp

noinst_PROGRAMS = testthread testevent testthreadpool testthreadpool2

testthread_SOURCES = \
	testthread.cpp

testevent_SOURCES = \
	testevent.cpp

testthreadpool_SOURCES = \
	testthreadpool.cpp

testthreadpool2_SOURCES = \
	testthreadpool2.cpp
