INCLUDES = -I$(top_srcdir)/include

EXTRA_DIST = \
	testalgo.dsp \
	testcsvfile.dsp \
	testencode.dsp \
	testlogfile.dsp \
	testproperties.dsp \
	teststr.dsp

noinst_PROGRAMS = \
	testalgo \
	testcsvfile \
	testencode \
	testlogfile \
	testproperties \
	teststr

testalgo_SOURCES = \
	testalgo.cpp

testcsvfile_SOURCES = \
	testcsvfile.cpp

testencode_SOURCES = \
	testencode.cpp

testlogfile_SOURCES = \
	testlogfile.cpp

testproperties_SOURCES = \
	testproperties.cpp

teststr_SOURCES = \
	teststr.cpp
