INCLUDES = -I$(top_srcdir)/include

EXTRA_DIST = \
	testalgo.dsp \
	testcsvfile.dsp \
	testencode.dsp \
	testlogger.dsp \
	testproperties.dsp \
	teststr.dsp \
	testencode-gbk.cpp

noinst_PROGRAMS = \
	testalgo \
	testcsvfile \
	testencode \
	testlogger \
	testproperties \
	teststr

testalgo_SOURCES = \
	testalgo.cpp

testcsvfile_SOURCES = \
	testcsvfile.cpp

testencode_SOURCES = \
	testencode.cpp

testlogger_SOURCES = \
	testlogger.cpp

testproperties_SOURCES = \
	testproperties.cpp

teststr_SOURCES = \
	teststr.cpp
