INCLUDES = -I$(top_srcdir)/include

EXTRA_DIST = \
	testalgo.dsp \
	testcsvfile.dsp \
	testencode.dsp \
	testlogfile.dsp \
	testproperties.dsp \
	teststring.dsp

noinst_PROGRAMS = \
	testalgo \
	testcsvfile \
	testencode \
	testlogfile \
	testproperties \
	teststring

testalgo_SOURCES = \
	testalgo.cpp

testcsvfile_SOURCES = \
	testcsvfile.cpp

testencode_SOURCES = \
	testencode.cpp

testlogfile_SOURCES = \
	testlogfile.cpp

testproperties_SOURCES = \
	testproperties.cpp

teststring_SOURCES = \
	teststring.cpp
